Fix align of button

--- a/src/components/prefs/prefs.less
+++ b/src/components/prefs/prefs.less
@@ -127,6 +127,7 @@
 
     &__legend
     {
+        text-align: left;
         font-weight: bold;
 		margin-left: 10px;
     }
